--- a/src/front/index.html
+++ b/src/front/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
   <title>Chatfuel challenge</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
